[package]
name = "rocket_sqlxsessionauth"
version = "0.1.0"
authors = ["Andrew Wheeler <genusistimelord@gmail.com>"]
description = "Flask-sessionAuth like library using SQLx and Rocket_SQLxSession for Rocket.rs."
edition = "2018"
license = "MIT"
repository = "https://github.com/genusistimelord/rocket_sqlxsessionauth"
readme = "README.md"
keywords = ["rocket", "session", "flask", "auth"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
rocket = { git="https://github.com/SergioBenitez/Rocket.git", version = "0.5.0-dev", features = ["secrets"] }
sqlx = { git= "https://github.com/launchbadge/sqlx.git", version = "0.4.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "json"] }
anyhow = "1.0.38"
rocket_sqlxsession = { git = "https://github.com/genusistimelord/rocket_sqlxsession.git"}
async-recursion = "0.3.1"